--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ionic3-geolocalicacao",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Tom'Sys",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "^4.3.2",
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
     "@angular/compiler-cli": "4.1.3",
@@ -21,7 +22,9 @@
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@ionic-native/core": "3.12.1",
+    "@ionic-native/geolocation": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
+    "@ionic-native/sqlite": "^4.1.0",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "ionic-angular": "3.6.0",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.3",
+    "@ionic/cli-plugin-cordova": "1.5.0",
     "@ionic/cli-plugin-ionic-angular": "1.4.0",
     "typescript": "2.3.4"
   },
